--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -90,6 +90,15 @@
 #msg-box4-t .mbr-article {
   color: #ffffff;
 }
+#msg-box4-10 .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box4-10 .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-10 .mbr-article {
+  color: #ffffff;
+}
 #ext_menu-u .mbr-brand__name {
   font-size: 16px;
 }
